--- a/index.html
+++ b/index.html
@@ -23,8 +23,39 @@
       </nav>
     </header>
     <main>
-      <section></section>
-      <section></section>
+      <section id="hero">
+        <div id="hero-content">
+          <h1>Taeho's Travel Page</h1>
+          <p>Let's explore the world together!</p>
+          <a href="/places.html">Discover places</a>
+        </div>
+      </section>
+      <section id="highlights">
+        <h2>Highlights</h2>
+        <ul id="destinations">
+          <li class="destination">
+            <img
+              src="/images/places/miami.jpg"
+              alt="Miami streets on sunny day"
+            />
+            <p>Miami <strong>USA</strong></p>
+          </li>
+          <li class="destination">
+            <img
+              src="/images/places/munich.jpg"
+              alt="Munich stadium in winter"
+            />
+            <p>Munich <strong>Germany</strong></p>
+          </li>
+          <li class="destination">
+            <img
+              src="/images/places/barcelona.jpg"
+              alt="Palm beach in Barcelona"
+            />
+            <p>Barcelona <strong>USA</strong></p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
